--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ body {
     color: #CACACD;
     padding: 10px 15px;
     border: none;
+    border-radius: 2px;
     position: fixed;
     z-index: 2;
   }
@@ -62,7 +63,6 @@ body {
   
   #main {
     transition: margin-left .5s;
-    padding: 20px;
   }
   
   /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
@@ -122,6 +122,7 @@ body {
 /* PROJECT HEADER */
 .proj-header {
     text-align: center;
+    position: absolute;
     top: 0;
     margin: 0px;
     text-decoration: none;
@@ -232,10 +233,11 @@ body {
 /* PROJECT FOOTER */
 .proj-footer {
     display: block;
+    position: absolute;
     bottom: 0;
     text-align: center;
     margin: 0px;
-    padding: 10px 50px;
+    padding: 10px 100px;
     color: #E5E5E6;
     background-color: #2C5F5C;
     text-decoration: none;
