--- a/style.css
+++ b/style.css
@@ -50,6 +50,8 @@ body {
     cursor: pointer;
     background-color: #22252c;
     color: #CACACD;
+    margin-top: 30px;
+    margin-left: 30px;
     padding: 10px 15px;
     border: none;
     border-radius: 2px;
@@ -122,32 +124,31 @@ body {
 /* PROJECT HEADER */
 .proj-header {
     text-align: center;
-    position: absolute;
-    top: 0;
+    width: 100%;
     margin: 0px;
     text-decoration: none;
     display: block;
     background-color: #E14658EB;
-    padding: 30px auto;
+    padding: 50px 20px auto auto;
     font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", sans-serif;
 }
 
 .proj-title {
     font-size: 40px;
     color: #FFFFFF;
-    line-height: 1.0;
+    line-height: 0.9;
 }
 
 .proj-status {
     font-size: 22px;
     color: #E5E5E6;
-    line-height: 1.0;
+    line-height: 0.9;
 }
 
 .proj-dates {
     font-size: 20px;
     color: #FFFFFF;
-    line-height: 1.1;
+    line-height: 1.0;
 }
 
 /* SHORTCUT BUTTONS */
@@ -161,7 +162,6 @@ body {
     border: none;
     border-radius: 5px;
     position: fixed;
-    padding: 5px 5px;
 }
 
 .proj-shortcuts a{
@@ -182,12 +182,11 @@ body {
 
 /* PROJECT POSTS */
 .post-header {
-    margin: 25px 0px 20px 20px;
+    margin: 25px 0px 20px 30px;
     width: auto; 
     text-align: left;
     padding: 15px 10px;
     display: inline-block;
-    font-family: Consolas, monaco, monospace;
     background-color: #2D9282;
     border-radius: 5px 5px 0px 0px;
 }
@@ -195,26 +194,29 @@ body {
 .post-date {
     font-size: 18px;
     text-decoration: bold;
-    line-height: 1.0;
+    line-height: 0.9;
+    font-family: Consolas, monaco, monospace;
     color: #E5E5E6;
 }
 
 .post-dow {
     font-size: 16px;
     text-decoration: none;
-    line-height: 1.0;
+    line-height: 0.9;
+    font-family: Consolas, monaco, monospace;
     color: #E5E5E6;
 }
 
 .post-title {
     font-size: 20px;
     text-decoration: bold;
-    line-height: 1.2;
+    line-height: 1.0;
+    font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", sans-serif;
     color: #FFFFFF;
 }
 
 .post-body {
-    margin: 0px 20px 20px;
+    margin: 0px 0px 20px 20px;
     padding: 30px 20px;
     text-align: left;
     text-decoration: none;
@@ -233,6 +235,7 @@ body {
 /* PROJECT FOOTER */
 .proj-footer {
     display: block;
+    width: 100%;
     position: absolute;
     bottom: 0;
     text-align: center;
@@ -241,8 +244,8 @@ body {
     color: #E5E5E6;
     background-color: #2C5F5C;
     text-decoration: none;
-    font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", sans-serif;
-    font-size: 14px;
+    font-family: Consolas, monaco, monospace;
+    font-size: 16px;
 }
 
 
