--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
   }
   
   .sidebar a {
-    padding: 10px 16px 10px 30px;
+    padding: 10px 12px 10px 15px;
     text-decoration: none;
     font-size: 18px;
     color: #fff;
@@ -40,8 +40,8 @@ body {
     right: 25px;
     font-size: 36px;
     padding: 0px 10px;
-    margin-left: 50px;
-    margin-right: 5px;
+    margin-top: 20px;
+    margin-right: 10px;
     border-radius: 5px;
   }
   
@@ -50,11 +50,11 @@ body {
     cursor: pointer;
     background-color: #22252c;
     color: #CACACD;
-    margin-top: 30px;
-    margin-left: 30px;
+    margin-top: 20px;
+    margin-left: 15px;
     padding: 10px 15px;
     border: none;
-    border-radius: 2px;
+    border-radius: 3px;
     position: fixed;
     z-index: 2;
   }
@@ -95,7 +95,7 @@ body {
 #status {
     text-align: center;
     max-width: 700px;
-    padding: 25px 20px 10px 10px; 
+    padding: 25px 20px 25px 20px; 
     margin: auto;
     text-decoration: none;
     font-size: 26px;
@@ -124,13 +124,13 @@ body {
 /* PROJECT HEADER */
 .proj-header {
     text-align: center;
-    width: 100%;
     margin: 0px;
     text-decoration: none;
     display: block;
     background-color: #E14658EB;
-    padding: 50px 20px auto auto;
+    padding: 20px auto 10px auto;
     font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", sans-serif;
+    border-radius: 0px 0px 1px 1px;
 }
 
 .proj-title {
@@ -153,8 +153,8 @@ body {
 
 /* SHORTCUT BUTTONS */
 .proj-shortcuts {
-    right: 5px;
-    bottom: 5px;
+    right: 10px;
+    bottom: 10px;
     text-align: center;
     line-height: 1.0;
     font-size: 12px;
@@ -182,13 +182,13 @@ body {
 
 /* PROJECT POSTS */
 .post-header {
-    margin: 25px 0px 20px 30px;
+    margin: 25px 30px 0px 30px;
     width: auto; 
     text-align: left;
     padding: 15px 10px;
     display: inline-block;
     background-color: #2D9282;
-    border-radius: 5px 5px 0px 0px;
+    border-radius: 7px 7px 0px 0px;
 }
 
 .post-date {
@@ -216,8 +216,8 @@ body {
 }
 
 .post-body {
-    margin: 0px 0px 20px 20px;
-    padding: 30px 20px;
+    margin: 0px 30px 0px 30px;
+    padding: 20px 30px;
     text-align: left;
     text-decoration: none;
     font-size: 16px;
@@ -236,10 +236,10 @@ body {
 .proj-footer {
     display: block;
     width: 100%;
-    position: absolute;
     bottom: 0;
     text-align: center;
-    margin: 0px;
+    margin-top: 20px;
+    border-radius: 1px 1px 0px 0px;
     padding: 10px 100px;
     color: #E5E5E6;
     background-color: #2C5F5C;
@@ -253,33 +253,35 @@ body {
 /* ABOUT PAGE */
 #about-header {
     text-align: center;
-    top: 0;
     margin: 0px;
-    padding: 20px 5px;
+    padding: 20px auto 10px auto;
     text-decoration: none;
-    font-size: 36px;
-    font-family: Consolas, monaco, monospace;
+    font-size: 40px;
+    font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", sans-serif;
     color: #FFFFFF;
     display: block;
+    border-radius: 0px 0px 1px 1px;
     background-color: #E14658;
 }
 
 #about-text {
+    margin: 0px 30px 0px 30px;
+    padding: 20px 30px;
     text-align: left;
-    font-family: Tahoma, Verdana, Segoe, sans-serif;
+    text-decoration: none;
     font-size: 16px;
-    color: #FFFFFF;
-    background-color: #262830;
-    padding: 25px 50px;
     display: block;
-    margin: 10px 25px;
+    color: #FFFFFF;
+    font-family: Tahoma, Verdana, Segoe, sans-serif;
+    background-color: #262830;
 }
 
 #github-link {
     text-align: center;
     font-family: Consolas, monaco, monospace;
-    font-size: 18px;
+    font-size: 16px;
     color: #FFFFFF;
+    margin-top: 20px;
 }
 
 #github-link a {
