--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ body {
 #status {
     text-align: center;
     max-width: 700px;
-    padding: 25px 20px 25px 20px; 
+    padding: 25px 20px 15px 20px; 
     margin: auto;
     text-decoration: none;
     font-size: 26px;
@@ -103,6 +103,7 @@ body {
     color: #FFFFFF;
     display: block;
     background-color: #E14658;
+    border-radius: 2px;
 }
 
 #website {
@@ -128,27 +129,28 @@ body {
     text-decoration: none;
     display: block;
     background-color: #E14658EB;
-    padding: 20px auto 10px auto;
     font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", sans-serif;
     border-radius: 0px 0px 1px 1px;
 }
 
 .proj-title {
+    padding-top: 30px;
     font-size: 40px;
     color: #FFFFFF;
-    line-height: 0.9;
+    line-height: 1.0;
 }
 
 .proj-status {
     font-size: 22px;
     color: #E5E5E6;
-    line-height: 0.9;
+    line-height: 1.0;
 }
 
 .proj-dates {
+    padding-top: 25px;
     font-size: 20px;
     color: #FFFFFF;
-    line-height: 1.0;
+    line-height: 1.1;
 }
 
 /* SHORTCUT BUTTONS */
@@ -185,16 +187,18 @@ body {
     margin: 25px 30px 0px 30px;
     width: auto; 
     text-align: left;
-    padding: 15px 10px;
+    padding-left: 30px;
+    padding-right: 10px;
     display: inline-block;
     background-color: #2D9282;
     border-radius: 7px 7px 0px 0px;
 }
 
 .post-date {
+    padding-top: 15px;
     font-size: 18px;
     text-decoration: bold;
-    line-height: 0.9;
+    line-height: 1.0;
     font-family: Consolas, monaco, monospace;
     color: #E5E5E6;
 }
@@ -202,15 +206,16 @@ body {
 .post-dow {
     font-size: 16px;
     text-decoration: none;
-    line-height: 0.9;
+    line-height: 1.0;
     font-family: Consolas, monaco, monospace;
     color: #E5E5E6;
 }
 
 .post-title {
+    padding-bottom: 10px;
     font-size: 20px;
     text-decoration: bold;
-    line-height: 1.0;
+    line-height: 1.1;
     font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", sans-serif;
     color: #FFFFFF;
 }
@@ -225,6 +230,7 @@ body {
     color: #FFFFFF;
     font-family: Tahoma, Verdana, Segoe, sans-serif;
     background-color: #262830;
+    border-radius: 0px 4px 4px 4px;
 }
 
 .post-body p {
@@ -254,7 +260,7 @@ body {
 #about-header {
     text-align: center;
     margin: 0px;
-    padding: 20px auto 10px auto;
+    padding: 50px auto 50px auto;
     text-decoration: none;
     font-size: 40px;
     font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", sans-serif;
@@ -265,7 +271,7 @@ body {
 }
 
 #about-text {
-    margin: 0px 30px 0px 30px;
+    margin: 40px 30px 5px 30px;
     padding: 20px 30px;
     text-align: left;
     text-decoration: none;
@@ -274,6 +280,7 @@ body {
     color: #FFFFFF;
     font-family: Tahoma, Verdana, Segoe, sans-serif;
     background-color: #262830;
+    border-radius: 4px;
 }
 
 #github-link {
