--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
     background-color: #22252c;
     overflow-x: hidden;
     padding-top: 60px;
-    transition: 0.5s;
+    transition: 0.2s;
   }
   
   .sidebar a {
@@ -50,12 +50,12 @@ body {
     cursor: pointer;
     background-color: #e14658;
     color: #FFFFFF;
+    position: fixed;
     margin-top: 20px;
     margin-left: 15px;
     padding: 10px 15px;
     border: none;
     border-radius: 3px;
-    position: fixed;
     z-index: 2;
     opacity: .85;
   }
@@ -190,7 +190,7 @@ body {
     width: auto; 
     text-align: left;
     padding-left: 15px;
-    padding-right: 15px;
+    padding-right: 20px;
     display: inline-block;
     background-color: #2D9282;
     border-radius: 10px 10px 0px 0px;
@@ -200,7 +200,7 @@ body {
     padding-top: 15px;
     font-size: 18px;
     text-decoration: bold;
-    line-height: 1.0;
+    line-height: 0.6;
     font-family: Consolas, monaco, monospace;
     color: #E5E5E6;
 }
@@ -208,7 +208,7 @@ body {
 .post-dow {
     font-size: 16px;
     text-decoration: none;
-    line-height: 1.0;
+    line-height: 0.6;
     font-family: Consolas, monaco, monospace;
     color: #E5E5E6;
 }
@@ -217,7 +217,7 @@ body {
     padding-bottom: 10px;
     font-size: 20px;
     text-decoration: bold;
-    line-height: 1.1;
+    line-height: 0.8;
     font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", sans-serif;
     color: #FFFFFF;
 }
@@ -262,7 +262,8 @@ body {
 #about-header {
     text-align: center;
     margin: 0px;
-    padding: 50px auto 50px auto;
+    padding-top: 75px;
+    padding-bottom: 75px;
     text-decoration: none;
     font-size: 40px;
     font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", sans-serif;
