--- a/style.css
+++ b/style.css
@@ -59,21 +59,6 @@ body {
     z-index: 2;
     opacity: .85;
   }
-
-  .home-openbtn {
-    font-size: 24px;
-    cursor: pointer;
-    background-color: #e14658;
-    color: #FFFFFF;
-    margin-top: 20px;
-    margin-left: 15px;
-    padding: 10px 15px;
-    border: none;
-    border-radius: 3px;
-    z-index: 2;
-    opacity: .85;
-
-  }
   
   .openbtn:hover {
     background-color: #22252c;
@@ -134,6 +119,11 @@ body {
 #website a {
     color: #FFFFFF;
     text-decoration: underline;
+}
+
+#important-message p {
+    color: #2b2b36;
+    margin: 0px;
 }
 
 
@@ -201,11 +191,11 @@ body {
 
 /* PROJECT POSTS */
 .post-header {
-    margin: 25px 30px 0px 30px;
+    margin: 25px 3% 0px 3%;
     width: auto; 
     text-align: left;
     padding-left: 15px;
-    padding-right: 20px;
+    padding-right: 23px;
     display: inline-block;
     background-color: #2D9282;
     border-radius: 10px 10px 0px 0px;
@@ -213,32 +203,29 @@ body {
 
 .post-date {
     padding-top: 15px;
-    font-size: 18px;
-    text-decoration: bold;
-    line-height: 0.6;
+    font-size: 20px;
+    line-height: 0.4;
     font-family: Consolas, monaco, monospace;
     color: #E5E5E6;
 }
 
 .post-dow {
-    font-size: 16px;
-    text-decoration: none;
-    line-height: 0.6;
+    font-size: 18px;
+    line-height: 0.4;
     font-family: Consolas, monaco, monospace;
     color: #E5E5E6;
 }
 
 .post-title {
-    padding-bottom: 10px;
+    padding-bottom: 0px;
     font-size: 20px;
-    text-decoration: bold;
     line-height: 0.8;
     font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", sans-serif;
     color: #FFFFFF;
 }
 
 .post-body {
-    margin: 0px 30px 10px 30px;
+    margin: 0px 3% 10px 3%;
     padding: 20px 30px;
     text-align: left;
     text-decoration: none;
@@ -277,7 +264,7 @@ body {
 #about-header {
     text-align: center;
     margin: 0px;
-    padding-top: 75px;
+    padding-top: 50px;
     padding-bottom: 75px;
     text-decoration: none;
     font-size: 40px;
