--- a/style.css
+++ b/style.css
@@ -76,6 +76,11 @@ body {
 
 
 /* HOME PAGE */
+#important-message p {
+    color: #22252c;
+    margin: 0px;
+}
+
 #main-title h2 {
     margin-top: 15%;
     text-align: center;
@@ -119,11 +124,6 @@ body {
 #website a {
     color: #FFFFFF;
     text-decoration: underline;
-}
-
-#important-message p {
-    color: #2b2b36;
-    margin: 0px;
 }
 
 
@@ -191,7 +191,7 @@ body {
 
 /* PROJECT POSTS */
 .post-header {
-    margin: 25px 3% 0px 3%;
+    margin: 25px 5% 0px 5%;
     width: auto; 
     text-align: left;
     padding-left: 15px;
@@ -204,14 +204,14 @@ body {
 .post-date {
     padding-top: 15px;
     font-size: 20px;
-    line-height: 0.4;
+    line-height: 0.2;
     font-family: Consolas, monaco, monospace;
     color: #E5E5E6;
 }
 
 .post-dow {
     font-size: 18px;
-    line-height: 0.4;
+    line-height: 0.2;
     font-family: Consolas, monaco, monospace;
     color: #E5E5E6;
 }
@@ -219,13 +219,13 @@ body {
 .post-title {
     padding-bottom: 0px;
     font-size: 20px;
-    line-height: 0.8;
-    font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", sans-serif;
+    line-height: 0.6;
+    font-family: Consolas, monaco, monospace;
     color: #FFFFFF;
 }
 
 .post-body {
-    margin: 0px 3% 10px 3%;
+    margin: 0px 5% 10px 5%;
     padding: 20px 30px;
     text-align: left;
     text-decoration: none;
@@ -250,12 +250,12 @@ body {
     text-align: center;
     margin-top: 30px;
     border-radius: 1px 1px 0px 0px;
-    padding: 20px 10%;
+    padding: 20px 12%;
     color: #E5E5E6;
     background-color: #2C5F5C;
     text-decoration: none;
     font-family: Consolas, monaco, monospace;
-    font-size: 18px;
+    font-size: 16px;
 }
 
 
