--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
   }
   
   .sidebar a {
-    padding: 10px 12px 10px 15px;
+    padding: 12px 25px 12px 20px;
     text-decoration: none;
     font-size: 18px;
     color: #fff;
@@ -38,11 +38,15 @@ body {
     position: absolute;
     top: 0;
     right: 25px;
-    font-size: 36px;
+    font-size: 30px;
     padding: 0px 10px;
     margin-top: 20px;
-    margin-right: 10px;
+    margin-right: 0px;
     border-radius: 5px;
+  }
+  .sidebar .closebtn:hover {
+    color: #e14658;
+
   }
   
   .openbtn {
@@ -76,8 +80,8 @@ body {
 
 
 /* HOME PAGE */
-#important-message p {
-    color: #22252c;
+#hidden-message p {
+    color: #2b2b36;
     margin: 0px;
 }
 
@@ -147,14 +151,14 @@ body {
 }
 
 .proj-status {
-    font-size: 20px;
+    font-size: 24px;
     color: #E5E5E6;
     line-height: 0.8;
 }
 
 .proj-dates {
     padding-bottom: 5px;
-    font-size: 20px;
+    font-size: 24px;
     color: #FFFFFF;
     line-height: 1.1;
 }
@@ -218,8 +222,8 @@ body {
 
 .post-title {
     padding-bottom: 0px;
-    font-size: 20px;
-    line-height: 0.6;
+    font-size: 22px;
+    line-height: 0.4;
     font-family: Consolas, monaco, monospace;
     color: #FFFFFF;
 }
