--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ body {
 /* HOME PAGE */
 #hidden-message p {
     color: #2b2b36;
-    margin: 0px;
+    margin-right: 0px;
     font-size: 8px;
 }
 
@@ -255,7 +255,7 @@ body {
     text-align: center;
     margin-top: 30px;
     border-radius: 1px 1px 0px 0px;
-    padding: 20px 12%;
+    padding: 30px 12%;
     color: #E5E5E6;
     background-color: #2C5F5C;
     text-decoration: none;
