--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ body {
 /* HOME PAGE */
 #hidden-message p {
     color: #2b2b36;
-    margin-right: 0px;
+    float: right;
     font-size: 8px;
 }
 
@@ -191,7 +191,7 @@ body {
 }
 
 .proj-shortcuts-top:hover, .proj-shortcuts-bot:hover {
-    background-color: #e14658;
+    background-color: #2D9282;
     padding: 3px 3px;
     border-radius: 5px;
 }
@@ -293,6 +293,10 @@ body {
     font-family: Verdana, Geneva, sans-serif;
     background-color: #262830;
     border-radius: 4px;
+}
+
+#about-text p {
+    text-indent: 50px;
 }
 
 #github-link {
