--- a/style.css
+++ b/style.css
@@ -152,7 +152,7 @@ body {
 
 .proj-status {
     font-size: 22px;
-    color: #FBFAFB;
+    color: #E5E5E6;
     font-family: Consolas, monaco, monospace;
     line-height: 0.6;
 }
@@ -235,7 +235,7 @@ body {
     padding: 30px 35px;
     text-align: left;
     text-decoration: none;
-    font-size: 18px;
+    font-size: 16px;
     display: block;
     color: #FBFAFB;
 	font-family: Verdana, Geneva, sans-serif; 
