--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body {
   border-radius: 5px;
 }
 .sidebar .closebtn:hover {
-  color: #e14658;
+  color: #ffffff;
 }
 
 .openbtn {
@@ -170,7 +170,6 @@ body {
   font-family: Consolas, monaco, monospace;
   line-height: 1;
   padding-bottom: 10px;
-  text-decoration: bold;
 }
 
 /* SHORTCUT BUTTONS */
